Change Patreon to Support, Fix Card wrap

--- a/public/assets/css/userdetail.less
+++ b/public/assets/css/userdetail.less
@@ -83,11 +83,12 @@
         & .cards {
             margin-bottom: 25px;
             display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
 
             & .card {
                 width: 100px;
                 height: 100px;
-                margin-right: 10px;
                 background-position: center;
                 background-size: cover;
                 opacity: 1;
